# Autolife-Planning

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CMakeLists.txt  README.md  index.html  objects.inv  pixi.toml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: docs.yml  pip-compat.yml
api/config/: index.html
api/environments/: index.html
api/kinematics/: index.html
api/planning/: index.html
api/types/: index.html
api/utilities/: index.html
autolife_planning/: _ompl_vamp.pyi  autolife.py
autolife_planning/agents/chat_agent/: __init__.py  chat_agent.py
autolife_planning/agents/point_agent/: __init__.py  point_agent.py
autolife_planning/behaviors/: __init__.py  base_behavior.py  random_dance.py
autolife_planning/config/: ik_config.py  robot_config.py
autolife_planning/core/: orchestrator.py
autolife_planning/dataclass/: commands.py  ik_types.py  planning_context.py  robot_configuration.py  robot_description.py  state.py
autolife_planning/envs/: base_env.py  pybullet_env.py
autolife_planning/interfaces/: robomesh.py
autolife_planning/kinematics/: __init__.py  ik_solver.py  ik_solver_base.py  pinocchio_fk.py  trac_ik_solver.py
autolife_planning/planning/: __init__.py  arm_motion_planning.py  constraints.py  motion_planner.py  motion_planning.py  navigation.py  validation.py  wb_motion_planning.py
autolife_planning/scripts/: table_top_down.py
autolife_planning/types/: __init__.py  geometry.py  ik.py  planning.py  robot.py
autolife_planning/utils/: stream_utils.py  vamp_utils.py  video_recorder.py
docs/: README.md  examples.md
examples/: constrained_ik_example.py  constrained_ik_example_vis.py  constrained_planning_example.py  ik_example.py  ik_example_vis.py  ik_solver_example.py  index.html  motion_planning_example.py  planning_example.py  random_dance_around_table.py  rls_pick_place_demo.py  subgroup_planning_example.py  trac_ik_example_vis.py
examples/constrained_planning/: line_horizontal.py  line_vertical.py  plane.py  plane_with_obstacle.py
examples/cost_planning/: _shared.py
examples/robot/: autolife_planner.py
ext/ompl_vamp/: compiled_constraint.hpp  constraints.hpp  ompl_vamp_ext.cpp  pinocchio_robot.hpp  planner.hpp  validity.hpp
getting-started/: index.html
resources/robot/autolife/: autolife.srdf  autolife_base.urdf  autolife_spherized.urdf
scripts/: build_robot_description.py  download_assets.sh  generate_fk.sh  robomesh_server.py
scripts/render_videos/: render_docs_videos.py
search/: search_index.json
tests/: conftest.py  test_constrained_planning.py  test_cost_planning.py  test_geometry.py  test_install_smoke.py  test_kinematics.py  test_motion_planning_pcd.py  test_planner_basic.py  test_types.py
tools/: simplify_meshes.py
