[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "autolife_planning"
version = "0.1.0"
description = "Autolife planning module"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "pybind11>=2.10",
]

[project.optional-dependencies]
dev = ["pre-commit"]
pinocchio = ["pin"]
vamp = ["vamp-planner @ file:./third_party/vamp"]
full = ["pin", "vamp-planner @ file:./third_party/vamp"]

[tool.setuptools.packages.find]
include = ["autolife_planning*"]
