[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "autolife_planning"
version = "0.1.0"
description = "Autolife planning module"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "pybind11>=2.10",
]

[project.optional-dependencies]
dev = ["pre-commit"]
pinocchio = ["pin"]

[tool.setuptools.packages.find]
include = ["autolife_planning*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
autolife_planning = { path = ".", editable = true }
vamp-planner = { path = "./third_party/vamp", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }

[tool.pixi.tasks]
cricket-configure = "cmake -GNinja -S third_party/cricket -B third_party/cricket/build"
cricket-build = { cmd = "cmake --build third_party/cricket/build", depends-on = ["cricket-configure"] }
foam-configure = "cmake -GNinja -S third_party/foam -B third_party/foam/build"
foam-build = { cmd = "cmake --build third_party/foam/build", depends-on = ["foam-configure"] }

[tool.pixi.dependencies]
cmake = ">=4.2.3,<5"
ninja = ">=1.13.2,<2"
cxx-compiler = ">=1.11.0,<2"
pkg-config = ">=0.29.2,<0.30"
git = ">=2.53.0,<3"
patch = ">=2.8,<3"
python = ">=3.11,<3.13"
pybind11 = ">=3.0.2,<4"
libboost-devel = "*"
orocos-kdl = ">=1.5.3,<2"
eigen = ">=3.4.0,<4"
nlopt = ">=2.10.0,<3"
pinocchio = ">=3.9.0,<4"
cppad = ">=20260000.0,<20260001"
cgal = ">=6.0.1,<7"
inja = ">=3.5.0,<4"
nlohmann_json = ">=3.12.0,<4"
fmt = ">=12.1.0,<13"
llvm = ">=22.1.0,<23"
